[package]
name = "deno_cache_dir"
version = "0.11.0"
edition = "2021"
license = "MIT"
description = "Cache directory logic used in Deno"
repository = "https://github.com/denoland/deno_cache"

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm = ["console_error_panic_hook", "js-sys", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
deno_media_type = "0.1.1"
indexmap = { version = "2.0.0", features = ["serde"] }
log = "0.4.19"
once_cell = "1.18.0"
parking_lot = "0.12.1"
serde = "1.0.183"
serde_json = "1.0.104"
sha2 = "^0.10.0"
thiserror = "1.0.44"
url = { version = "2.3.1", features = ["serde"] }

console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "=0.3.68", optional = true }
wasm-bindgen = { version = "=0.2.91", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.7.1"
