[package]
name = "deno_cache_dir_wasm"
version = "0.0.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
path = "./lib.rs"

[dependencies]
base32 = "=0.5.1"
boxed_error = "0.2.3"
deno_cache_dir = "0.27.0"
deno_error = { version = "0.7.0", features =["url"] }
deno_media_type = "0.4.0"
deno_path_util = "0.6.0"
sys_traits = { version = "0.1.24", features = ["wasm"] }
indexmap = { version = "2.0.0", features = ["serde"] }
log = "0.4.19"
once_cell = "1.18.0"
parking_lot = "0.12.1"
serde = "1.0.183"
serde_json = { version = "1.0.104", features = ["preserve_order"] }
sha2 = "0.10.0"
thiserror = "2"
url = { version = "2.5.1", features = ["serde"] }

console_error_panic_hook = "0.1.7"
js-sys = "=0.3.83"
wasm-bindgen = "=0.2.106"
serde-wasm-bindgen = "0.6.5"
